Refactor to utilize new Java NIO.